Replication Framework/services_creators/yamls-to-apply/recommendationservice-apply/recommendationservice-svc-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice-2
spec:
  ports:
  - name: grpc
    port: 41781
    targetPort: 41781
  selector:
    app: recommendationservice-2
  type: ClusterIP
