Replication Framework/services_creators/yamls-to-apply/recommendationservice-apply/recommendationservice-netpol-7-frontend-7.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recommendationservice-7-allow-frontend-7
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-7
    ports:
    - port: 28574
  podSelector:
    matchLabels:
      app: recommendationservice-7
